third commit, fixed wrap issue

--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -216,6 +216,7 @@ footer img {
     width: 100%;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer ul {
